examples/kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simple-idp
spec:
  podSelector:
    matchLabels:
      app: simple-idp
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress: []
